# showcase-3d-printer-anomaly-detection

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  README.md  build.sh  project.toml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/docker-compose/: README.md  docker-compose.yaml
examples/docker-compose/config/: config.yaml
examples/docker-compose/config/schema/: anomalies.avsc  data.avsc
examples/k8s/: README.md  configmap.yaml
showcase_3d_printer_anomaly_detection/: runner.py
showcase_3d_printer_anomaly_detection/kafka_pc/: KafkaPC.py
showcase_3d_printer_anomaly_detection/model/: prediction_model.joblib
tests/: test_showcase_3d_printer_anomaly_detection.py
